<!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of Shops Queue.
  ~
  ~ Shops Queue is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Shops Queue is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Shops Queue.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Shops Queue</string>
    <string name="input_email_hint">E-mail address</string>
    <string name="input_password_hint">Password</string>
    <string name="login_fragment_title">Login</string>
    <string name="login_form_submit">Login</string>
    <string name="form_field_required">Field required</string>
    <string name="form_invalid_email_field">Invalid email address</string>
    <string name="sign_up_form_submit">Sign up</string>
    <string name="sign_up_fragment_title">Hello, new user!</string>
    <string name="input_name_hint">Name</string>
    <string name="input_surname_hint">Surname</string>
    <string name="form_field_too_short">Field value too short</string>
    <string name="back_button_description">Back</string>
    <string name="form_field_too_long">Field value too long</string>
    <string name="ok_button">OK</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_login_invalid">Invalid login</string>
    <string name="error_network_offline">Check your Internet connection</string>
    <string name="error_sign_up_duplicate_email">E-mail address already used</string>
    <string name="menu_item_logout">Logout</string>
    <string name="owner_latest_user_called_title">Latest customer called:</string>
    <string name="owner_no_user_called">No user has been called</string>
    <string name="owner_call_next_user">Call next customer</string>
    <string name="error_fetch_shop_info">An error occurred fetching the current shop</string>
    <string name="user_fragment_title" translatable="false">@string/app_name</string>
    <string name="owner_fragment_title">Shop Owner</string>
    <string name="admin_fragment_title">Administration panel</string>
    <string name="booking_item_created_at_date">In queue since %s</string>
    <string name="owner_next_users_empty_view">There isn\'t any user in the queue.\nYou can try to refresh this page.</string>
    <string name="owner_next_users_title">Next customers in the queue:</string>
    <string name="bookings_cancel_all">Cancel all</string>
    <string name="confirm_dialog_title">Are you sure?</string>
    <string name="confirm_no_button">No</string>
    <string name="confirm_yes_button">Yes</string>
    <string name="owner_cancel_all_message">All the bookings will be cancelled</string>
    <string name="admin_tab_users">Users</string>
    <string name="admin_tab_shops">Shops</string>
    <string name="menu_delete_action">Delete</string>
    <string name="user_delete_confirm_message">This user and all of his data will be deleted irrevocably.</string>
    <string name="role_user">User</string>
    <string name="role_admin">Administrator</string>
    <string name="role_owner">Shop owner</string>
    <string name="error_result_not_found">Requested item not found</string>
    <string name="shop_picker_fragment_title">Pick a shop</string>
    <string name="new_user_title">Add new user</string>
    <string name="user_edit_save">Save user</string>
    <string name="input_shop_for_owner">Shop</string>
    <string name="shop_delete_confirm_message">This shop, its owner and all of their data will be deleted</string>
    <string name="shop_edit_save">Save shop</string>
    <string name="new_shop_title">Add a new shop</string>
    <string name="map_empty_selection_message">Tap to pick a location</string>
    <string name="map_location_search">Search location…</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="permission_dialog_message">The feature you\'re trying to use can\'t work without this permission</string>
    <string name="permission_dialog_allow_button">Allow</string>
    <string name="permission_dialog_deny_button">Deny</string>
    <string name="gps_disabled_error">Unable to get current location.</string>
    <string name="location_picker_fragment_title">Pick a location</string>
    <string name="pick_location_required">You have to first choose a location</string>
    <string name="error_invalid_request_body">An error occurred sending the request</string>
    <string name="error_forbidden">You are not authorized to perform this action</string>
    <string name="error_api_conflict">The data you\'ve inserted already exists</string>
    <string name="error_api_server">A server error occurred. Sorry for the inconvenience</string>
    <string name="shop_owners_list_title">Shop owners</string>
    <string name="shop_owners_list_empty">No user owns this shop.\nGo into a user\'s details to assign it.</string>
    <string name="address_input_hint">Address</string>
    <string name="menu_user_location">Show user location</string>
    <string name="menu_user_refresh_bookings">Refresh bookings</string>
    <string name="user_bookings_title">Your bookings</string>
    <string name="user_bookings_empty">No bookings found.</string>
    <string name="add_booking_to_shop">Book</string>
    <string name="shop_name_search_input_hint">Shop name</string>
    <string name="no_shops_found">No shops were found</string>
    <string name="shop_distance_field">Distance: %.2f KM</string>
    <string name="user_favourite_shops">Favourite shops</string>
    <string name="cancel_booking_from_shop">Cancel</string>
    <string name="cancel_booking_confirm_message">You will lose your booking. If you book again, you\'ll be at the end of the queue again</string>
    <string name="notification_channel_booking_notice">Bookings notice</string>
    <string name="notification_booking_cancellation_message">Sorry, your booking has just been cancelled by the shop owner.</string>
    <string name="notification_queue_notice_message">You\'ve %d people ahead in the queue.</string>
    <string name="notification_next_turn_message">Harry up! You\'re the next person in the queue.</string>
    <string name="notification_your_turn_message">It\'s your turn! Go to the shop as fast as you can.</string>
    <string name="user_your_turn_message"><b>It\'s your turn! Go to the shop as fast as you can.</b></string>
    <string name="user_booking_already_present">You\'ve already in the queue</string>
    <string name="action_download_apk">Download latest APK available</string>
    <string name="action_share_app">Share app</string>
    <string name="action_source_code">Show source code</string>
    <string name="action_show_licenses">Show open source licenses</string>
    <string name="license" translatable="false">Copyright 2020 Simone Sestito\n\nThis program is free software: you can redistribute it and/or modify\nit under the terms of the GNU General Public License as published by\nthe Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program.  If not, see http://www.gnu.org/licenses/</string>
    <string name="license_title">License</string>
    <string name="about_fragment_title">About</string>
    <string name="shops_queue_count_singular">%d person in the queue</string>
    <string name="shops_queue_count_plural">%d people in the queue</string>
    <string name="user_booking_queue_count_singular">%d person ahead in the queue</string>
    <string name="user_booking_queue_count_plural">%d people ahead in the queue</string>
    <string name="user_favourite_shops_empty_message">No favourite shops found</string>
    <string name="menu_item_current_user_profile">Your profile</string>
    <string name="sessionsFragmentTitle">Active sessions</string>
    <string name="session_id_title">Session #%d</string>
    <string name="session_login_date">Creation date: %s</string>
    <string name="session_last_usage">Last usage date: %s</string>
    <string name="revoke_session_message">You\'ll need to login again on that device</string>
    <string name="current_session_badge_text">Current</string>
    <string name="login_email_not_confirmed">Check your e-mail box: you should have received an e-mail to confirm your account.</string>
    <string name="user_active_account_input">Activate account</string>
    <string name="sign_up_confirm_email_dialog_title">Confirm your e-mail address</string>
    <string name="price_label" translatable="false">€ %.2f</string>
    <string name="show_owner_products">Show products</string>
    <string name="owner_products_title">Your products</string>
    <string name="product_delete_confirm_message">This product will be deleted irrevocably</string>
    <string name="input_ean_hint" translatable="false">EAN</string>
    <string name="product_edit_save">Save product</string>
    <string name="input_price_hint">Price</string>
    <string name="new_product_title">New product</string>
    <string name="invalid_ean_input">Invalid EAN-13 code</string>
    <string name="invalid_price_input">Invalid price</string>
    <string name="shop_order_items">Order items</string>
    <string name="user_shop_products">Products</string>
    <string name="products_empty_message">No products available</string>
    <string name="shopping_order_created_at_date">Order with %d items made at %s</string>
    <string name="shopping_order_ready"><b>Your order is ready to retire!</b></string>
    <string name="shopping_order_not_ready">Not ready yet</string>
    <string name="cancel_order_confirm_message">You will lose your order</string>
    <string name="total_price_label">Total: %.2f €</string>
    <string name="shopping_list_status_ready">Ready to retire</string>
    <string name="shopping_list_status_to_do">To Do</string>
    <string name="owner_orders_empty_message">No orders received yet</string>
    <string name="owner_shopping_lists_title">Received orders</string>
    <string name="owner_orders_action_cancel">Cancel this order</string>
    <string name="owner_orders_action_prepare">Set this order ready to be retired</string>
    <string name="owner_orders_action_retired">Set the order retired by the user</string>
    <string name="owner_orders_bottom_sheet_title">%s\'s order</string>
    <string name="products_count_label_singular">%d product</string>
    <string name="products_count_label_plural">%d products</string>
    <string name="notification_channel_orders_notice">Product orders</string>
    <string name="notification_order_ready_message">Your order is ready to retire!</string>
    <string name="notification_order_cancelled_message">Your order has been cancelled by the shop owner</string>
</resources>
