<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of Shops Queue.
  ~
  ~ Shops Queue is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Shops Queue is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Shops Queue.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_graph"
    app:startDestination="@id/userMainFragment">
    <fragment
        android:id="@+id/userMainFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.UserMainFragment"
        android:label="@string/user_fragment_title"
        tools:layout="@layout/user_fragment">
        <action
            android:id="@+id/action_userMainFragment_to_userFavouriteShopsFragment"
            app:destination="@id/userFavouriteShopsFragment" />
        <action
            android:id="@+id/action_userMainFragment_to_userShopProductsFragment"
            app:destination="@id/userShopProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFavouriteShopsFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.UserFavouriteShopsFragment"
        android:label="@string/user_favourite_shops"
        tools:layout="@layout/user_favourite_shops" />
    <fragment
        android:id="@+id/userShopProductsFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.UserShopProductsFragment"
        android:label="@string/user_shop_products"
        tools:layout="@layout/products_list">
        <argument
            android:name="shopId"
            app:argType="integer" />
    </fragment>

</navigation>