<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of Shops Queue.
  ~
  ~ Shops Queue is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Shops Queue is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Shops Queue.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:orientation="vertical"
    android:padding="@dimen/activity_content_margin">

    <TextView
        android:id="@+id/ownerOrdersTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?colorAccent"
        tools:text="Order by John Scott" />

    <TextView
        android:id="@+id/ownerOrdersCancelButton"
        style="@style/Widget.App.ListView.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_cancel_24"
        android:paddingVertical="12dp"
        android:text="@string/owner_orders_action_cancel" />

    <TextView
        android:id="@+id/ownerOrdersPrepareButton"
        style="@style/Widget.App.ListView.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_done_black_24dp"
        android:paddingVertical="12dp"
        android:text="@string/owner_orders_action_prepare" />

    <TextView
        android:id="@+id/ownerOrdersRetiredButton"
        style="@style/Widget.App.ListView.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_done_all_24"
        android:paddingVertical="12dp"
        android:text="@string/owner_orders_action_retired" />
</LinearLayout>