<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of Shops Queue.
  ~
  ~ Shops Queue is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Shops Queue is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Shops Queue.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_graph"
    app:startDestination="@id/adminFragment">
    <fragment
        android:id="@+id/adminFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.AdminFragment"
        android:label="@string/admin_fragment_title"
        tools:layout="@layout/admin_fragment">
        <action
            android:id="@+id/adminUserEdit"
            app:destination="@id/adminUserEditFragment" />
        <action
            android:id="@+id/adminShopEdit"
            app:destination="@id/adminShopEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/shopPickerFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.ShopPickerFragment"
        android:label="@string/shop_picker_fragment_title"
        tools:layout="@layout/shop_picker" />
    <fragment
        android:id="@+id/adminUserEditFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.AdminUserEditFragment"
        android:label="@string/admin_fragment_title"
        tools:layout="@layout/admin_user_edit">
        <action
            android:id="@+id/adminNewUserPickShop"
            app:destination="@id/shopPickerFragment" />
        <argument
            android:name="userId"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/adminShopEditFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.AdminShopEditFragment"
        android:label="@string/admin_fragment_title"
        tools:layout="@layout/admin_shop_edit">
        <argument
            android:name="shopId"
            android:defaultValue="0" />
        <action
            android:id="@+id/adminShopEditPickLocation"
            app:destination="@id/locationPickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/locationPickerFragment"
        android:name="com.simonesestito.shopsqueue.ui.fragment.LocationPickerFragment"
        android:label="@string/location_picker_fragment_title"
        tools:layout="@layout/location_picker" />
</navigation>